# tmChat

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
static/css/: chat.css
static/js/: chat.js  theme.js
templates/: index.html
tmchat-bot/: README.md  bot.py  bots.md  examplebot.py  package.json  pnpm-lock.yaml  tsconfig.json
tmchat-bot-rs/: Cargo.toml
tmchat-bot-rs/examples/: echo.rs  tell.rs
tmchat-bot-rs/src/: lib.rs
tmchat-bot/examples/partybot/: index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
tmchat-bot/src/: index.ts
