[project]
name = "tmchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-hashing>=1.1",
    "flask-simple-crypt>=0.3.3",
    "gunicorn>=25.3.0",
    "postgrest>=2.28.3",
    "python-dotenv>=1.2.2",
    "realtime>=2.28.3",
    "requests>=2.33.1",
    "supabase>=2.28.3",
]
